<resources>

    <string name="app_name">ZHPaySDK</string>
    <string name="ZH_PAY">智慧支付</string>
    <string name="RMB">¥</string>
    <string name="amount_dollar">金额（元）：</string>
    <string name="order_detail">订单详情 ></string>
    <string name="order_detail_title">订单详情</string>
    <string name="Beneficiary">收款方：</string>
    <string name="product_name">商品名称：充值</string>
    <string name="pay_amount">支付金额：</string>
    <string name="ICBC">工商银行</string>
    <string name="tail_number">（尾号%1$s）</string>
    <string name="update">更改 ></string>
    <string name="sure">确定</string>
    <string name="get">获取</string>
    <string name="other_paperwork">身份证</string>
    <string name="ID">身份证：</string>
    <string name="HKMacao">港澳证</string>
    <string name="TaiWan">台胞证</string>
    <string name="TemCred">临时证件</string>
    <string name="Foreigner">外籍证</string>
    <string name="input_ID">请输入付款银行卡证件号</string>
    <string name="cardholder">持卡人：</string>
    <string name="input_cardholder">请输入持卡人姓名</string>
    <string name="card_number">卡号：</string>
    <string name="input_card_number">请输入银行卡号</string>
    <string name="validity">有效期：</string>
    <string name="input_validity">月份/年份，如09/12填写0912</string>
    <string name="CVV">CVV码：</string>
    <string name="input_CVV">信用卡背面三位数字</string>
    <string name="phone">手机号：</string>
    <string name="input_phone">请输入银行卡预留手机号</string>
    <string name="please_input_CVV">请输入CVV码</string>
    <string name="please_input_validity">请输入有效期</string>
    <string name="security_code">验证码：</string>
    <string name="input_security_code">请输入短信验证码</string>
    <string name="input_bankcard_info">请填写银行卡信息</string>
    <string name="agree_pay">同意《支付协议》</string>
    <string name="agree_pay_tips">注：限额单笔100万、当日500万</string>
    <string name="next">下一步</string>
    <string name="wrong_data">数据格式错误！</string>
    <string name="wrong_sign">签名验证失败！</string>
    <string name="order_success">下单成功！</string>
    <string name="code_has_send">验证码已发送！</string>
    <string name="pay_success">支付成功！</string>
    <string name="loadingZHPay">加载支付...</string>
    <string name="loading">加载中...</string>
    <string name="paying">支付提交中...</string>
    <string name="select_bank">请选择银行</string>
    <string name="card_type">卡类型</string>
    <string name="savingsCard">储蓄卡</string>
    <string name="creditCard">信用卡</string>
    <string name="card_type2">卡类型：</string>
    <string name="select_card_type">请选择卡类型</string>



    <string name="not_network">网络错误</string>
    <string name="NoConnectionError">当前网络不可用，请检查网络设置</string>
    <string name="ParseError">解析错误</string>
    <string name="TimeoutError">超时，请稍后再试</string>
    <string name="ServerError">服务器错误</string>
    <string name="AuthFailureError">协议验证失败</string>
</resources>
