<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:orientation="vertical">
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dip">

                <ImageView
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back"
                        android:layout_centerVertical="true"/>

                <TextView
                        android:id="@+id/center_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/title_black"
                        android:textSize="18dip"
                        android:text="@string/select_bank"/>

                <TextView
                        android:id="@+id/sure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/sure"
                        android:textColor="@color/title_black"
                        android:textSize="14dip"/>
            </RelativeLayout>

            <TextView android:layout_width="fill_parent" android:layout_height="1dip"
                      android:background="@color/info_item_line"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dip"
                    android:text="@string/card_type"
                    android:textSize="14dip"
                    android:textColor="@color/info_item_title"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/savingsCard"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/savingsCard"
                        android:textSize="16dip"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:padding="30dip"
                        android:background="@color/red_background"/>

                <TextView
                        android:id="@+id/creditCard"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/creditCard"
                        android:textSize="16dip"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:padding="30dip"
                        android:background="@color/red_line"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/savingsBanks"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            <LinearLayout
                    android:id="@+id/creditBanks"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>