<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:id="@+id/layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="20dip">

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dip">

                <ImageView
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back"
                        android:layout_centerVertical="true"/>

                <TextView
                        android:id="@+id/center_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/title_black"
                        android:textSize="18dip"
                        android:text="@string/ZH_PAY"/>

                <ImageView
                        android:id="@+id/more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/more"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
            </RelativeLayout>
            <LinearLayout
                    android:id="@+id/amount_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red_background"
                    android:orientation="vertical">

                <RelativeLayout
                        android:id="@+id/amount_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dip">
                    <TextView
                            android:id="@+id/amount_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/amount_dollar"
                            android:textColor="@color/red_word_color"
                            android:textSize="14dip"
                            android:layout_centerVertical="true"/>

                    <TextView
                            android:id="@+id/custom_order_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/order_detail_round"
                            android:text="@string/order_detail"
                            android:textColor="@color/white"
                            android:textSize="14dip"
                            android:gravity="center"
                            android:paddingLeft="15dip"
                            android:paddingRight="15dip"
                            android:paddingTop="5dip"
                            android:paddingBottom="5dip"
                            android:layout_centerVertical="true"
                            android:visibility="gone"/>
                </RelativeLayout>


                <TextView
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:textSize="40dip"
                        android:text="¥90.85"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                <RelativeLayout
                        android:id="@+id/amount_bottom"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dip">

                    <TextView
                            android:id="@+id/order_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/order_detail_round"
                            android:text="@string/order_detail"
                            android:textColor="@color/white"
                            android:textSize="14dip"
                            android:gravity="center"
                            android:paddingLeft="15dip"
                            android:paddingRight="15dip"
                            android:paddingTop="5dip"
                            android:paddingBottom="5dip"
                            android:layout_centerVertical="true"/>
                </RelativeLayout>

                <LinearLayout
                        android:id="@+id/amount_benefit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="20dip"
                        >

                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="1dip"
                            android:background="@color/red_line"/>

                    <TextView
                            android:id="@+id/beneficiary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dip"
                            android:text="@string/Beneficiary"
                            android:textColor="@color/white"
                            android:textSize="14dip"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ID_BANK_INFO_LAYOUT"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <com.checkout.diancan.ui.widget.IdCodeInfoItemView
                        android:id="@+id/idcode_item"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/bankCard"
                        android:layout_width="fill_parent"
                        android:layout_height="50dip"
                        android:background="@color/white"
                        android:textSize="14dip"
                        android:textColor="@color/info_item_title"
                        android:gravity="center|left"
                        android:paddingLeft="15dip"/>
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="40dip"
                        android:text="@string/input_bankcard_info"
                        android:textColor="@color/grey_text"
                        android:textSize="14dip"
                        android:gravity="center|left"
                        android:paddingLeft="15dip"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/infos"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>


            <RelativeLayout
                    android:id="@+id/agree_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dip"
                    android:paddingBottom="15dip"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:textColor="@color/info_item_title"
                        android:textSize="14dip"
                        android:text="@string/agree_pay"
                        android:paddingLeft="15dip"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/agree_pay_tips"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:textColor="@color/info_item_title"
                        android:layout_alignParentRight="true"
                        android:textSize="14dip"
                        android:text="@string/agree_pay_tips"
                        android:paddingRight="15dip"
                        android:gravity="center"/>
            </RelativeLayout>

            <Button
                    android:id="@+id/next"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:background="@drawable/red_button_round"
                    android:textColor="@color/white"
                    android:textSize="18dip"
                    android:text="@string/next"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>