<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/info_title"
                android:textColor="@color/info_item_title"
                android:textSize="14dip"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:padding="15dip"/>

        <RelativeLayout
                android:id="@+id/info_rignt_layout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingRight="15dip">

            <TextView
                    android:id="@+id/right_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14dip"
                    android:text="@string/update"
                    android:layout_centerVertical="true"
                    android:visibility="gone"/>

            <ImageView
                    android:id="@+id/right_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/help"
                    android:layout_centerVertical="true"
                    android:visibility="gone"/>

            <TextView
                    android:id="@+id/right_button"
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:textSize="14dip"
                    android:textColor="@color/white"
                    android:text="@string/get"
                    android:background="@drawable/red_button_round"
                    android:gravity="center"
                    android:paddingTop="5dip"
                    android:paddingBottom="5dip"
                    android:layout_centerVertical="true"
                    android:visibility="gone"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/right_select"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                <TextView
                        android:layout_width="1dip"
                        android:layout_height="30dip"
                        android:background="@color/info_item_line"
                        android:layout_marginTop="10dip"
                        android:layout_marginBottom="10dip"/>
                <TextView
                        android:id="@+id/select_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other_paperwork"
                        android:textColor="@color/info_item_title"
                        android:paddingLeft="15dip"
                        android:paddingRight="10dip"
                        android:textSize="14dip"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/choose_down"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/info_title"
                android:layout_toLeftOf="@id/info_rignt_layout"
                android:layout_centerVertical="true"
                android:paddingRight="15dip">

            <TextView
                    android:id="@+id/info_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14dip"
                    android:visibility="gone"/>

            <EditText
                    android:id="@+id/info_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:textSize="14dip"
                    android:textColorHint="@color/edit_hint_color"
                    android:visibility="gone"/>
        </RelativeLayout>
    </RelativeLayout>
    <TextView android:layout_width="fill_parent" android:layout_height="1dip"
              android:background="@color/info_item_line"
              android:layout_marginLeft="15dip"/>
</LinearLayout>